--- a/source/popup.html
+++ b/source/popup.html
@@ -2,15 +2,12 @@
 </head>
 <body>
 	<center>
-		<a style="font-size: 0px;" href="http://scratchformat.usa.cc/" target="_newtab">
-			<img src="logo3.png" width='200'>
-		</a>
 		<br>
 		<updatetitle>Update 9.0</updatetitle>
 	</center>
 		<ul>
 			<!-- Updates go here -->
-			<li>The 1.0.0 update is here, Its been a while, and ScratchFormat was almost discontinued. Thanks to Its increasing populatity, I have decided to re-write the entire thing!</li>
+			<li>The 1.0.0 update is here! Its been a while, and ScratchFormat was almost discontinued. Due to it's increasing populatity, I have decided to re-write the entire thing!</li>
 		</ul>
 	<center>
 		<h6>Made by <a href="https://scratch.mit.edu/users/pufflegamerz/" target="_newtab">@pufflegamerz</a>.</h6>
