--- a/documentation.html
+++ b/documentation.html
@@ -1,5 +1,7 @@
 <h1>Need Help With ScratchFormat?</h1>
 
+<p>*Please note that the ScratchFormat project has been abandoned and will not recieve further updates.</p>
+
 <p><strong>Bold</strong> - (b)Bold Text(/b)</p>
 
 <p><strong>Underline</strong> - (u)Underline Text(/u)</p>
@@ -17,21 +19,3 @@
 <p><strong>Underline</strong> - (u)Underline Text(/u)</p>
 
 <p><strong>Color</strong> - (color=*color goes here*)Underline Text(/u)</p>
-
-<h2>Bugs</h2>
-
-<h3>Known Issues Without Fixes</h3>
-
-<ul>
-	<li>item 1</li>
-	<li>item 2</li>
-	<li>item 3</li>
-</ul>
-
-<h3>Solved Issues</h3>
-
-<ul>
-	<li>solved 1</li>
-	<li>solved 2</li>
-	<li>solved 3</li>
-</ul>
